<resources>
    <string name="app_name">FullPractice</string>
    <string name="welcome_text">Welcome!</string>
    <string name="user_room_txt">Add User to Room</string>
    <string name="view_room_users_txt">View Room Users</string>
    <string name="name_txt">Name</string>
    <string name="email_txt">Email</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="age">Age</string>
    <string name="submit_btn">Submit</string>
    <string name="age_txt">Age</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_txt">Back</string>
    <string name="default_text">Default</string>
</resources>